--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,9 @@
+/* 테일윈드 */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+/* 폰트 */
 @font-face {
   font-family: "GmarketSansMedium";
   src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff")
@@ -20,4 +22,16 @@ html > body button {
   color: #333;
   text-underline-position: under;
   line-height: 1.3;
+}
+
+/* 커스텀 */
+html,
+body,
+#root {
+  height: 100%;
+}
+
+#root {
+  display: flex;
+  flex-direction: column;
 }
