--- a/src/index.css
+++ b/src/index.css
@@ -35,3 +35,14 @@ body,
   display: flex;
   flex-direction: column;
 }
+
+/* confetti-canvas */
+#confetti-canvas {
+  z-index: 2500 !important;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+}
